updates ember model projection

--- a/projections/ember.projections.json
+++ b/projections/ember.projections.json
@@ -117,7 +117,9 @@
     "command": "model",
     "template": [
       "import DS from 'ember-data';",
-      "export default DS.Model.extend({",
+      "const { Model, attr } = DS;",
+      "",
+      "export default Model.extend({",
       "",
       "});"
     ],
